tests/functions/valid/later_decl.amu
s32 foo(s32 a) {
    return a + 1;
}

s32 main() {
    return foo(4);
}

s32 foo(s32 a);