tests/functions/invalid/redefine_variable.amu
s32 foo(s32 x) {
    s32 x = 3;
}

s32 main() {
    foo(1);
}